package org.example.interviewQuestions.parkingLot;

public enum VehicleType {
    TWO_WHEELER,
    FOUR_WHEELER
}
